tests/ui/g-loop-continue-wrong-control-kind.stderr
error[E0080]: evaluation panicked: local control messages require self-send
 --> src/global.rs
  |
  |         crate::global::validate_send_contract::<From, To, M>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::send::<hibana::g::Role<0>, hibana::g::Role<1>, hibana::g::Msg<161, (), hibana::integration::cap::control::LoopContinueKind>, 0>::{constant#0}` failed inside this call
  |
note: inside `hibana::global::validate_send_contract::<Role<0>, Role<1>, Msg<161, (), LoopContinueKind>>`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global.rs
  |
  |                 panic!("local control messages require self-send")
  |                 -------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         crate::global::validate_send_contract::<From, To, M>();
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<1>, Msg<161, (), LoopContinueKind>, 0>`
  --> tests/ui/g-loop-continue-wrong-control-kind.rs:7:13
   |
 7 |       let _ = g::send::<
   |  _____________^
 8 | |         g::Role<0>,
 9 | |         g::Role<1>,
10 | |         g::Msg<
...  |
15 | |         0,
16 | |     >();
   | |_______^
